# personal-website

./: .env.example  .gitignore  ADMIN_TODO.md  CLAUDE.md  Dockerfile.claude  README.md  docker-compose.claude.yml  newsletter_senders.txt  pyproject.toml  start.sh  todo.txt
.claude/: settings.local.json
calyx/: .dockerignore  .env.example  ADMIN_TODO.md  DESIGN.md  Dockerfile.claude  PRODUCT.md  bucket_list.txt  bugs.txt  docker-compose.claude.yml  mailing_lists.md  my_interests.txt  pyproject.toml  start.sh  todo.txt
calyx/demos/: calendar.html
calyx/research/: event_sources.md  newsletter_links.txt
calyx/scripts/: auth_gcal.py  auth_spotify.py  auth_youtube_history.py  browser_test.py  generate_demos.py  install_cron.sh  security_audit.py  send_admin_digest.py  send_ratings.py  send_tonight.py  send_weekend_preview.py  smoke_test.sh  telegram_bot.py  test_email_cal.py  train_model.py  watchdog.sh
calyx/src/calyx/: config.py  daily.py  db.py  gcal.py  main.py  models.py
calyx/src/calyx/dashboard/: app.py  auth.py
calyx/src/calyx/email/: composer.py  invite.py  sender.py
calyx/src/calyx/events/: aggregator.py  bandsintown.py  berklee.py  boston_calendar.py  community.py  dice.py  eventbrite.py  geocoder.py  luma.py  meetup.py  museums.py  newsletters.py  outdoor.py  resident_advisor.py  songkick.py  ticketmaster.py  timeout_boston.py  university.py
calyx/src/calyx/extract/: interests.py
calyx/src/calyx/ingest/: gmail.py  spotify.py  youtube.py
calyx/src/calyx/ranking/: bucket_list.py  ml_model.py  ranker.py
calyx/src/recom/: config.py  db.py
calyx/src/recom/dashboard/: app.py
calyx/src/recom/email/: composer.py
calyx/src/recom/events/: aggregator.py  boston_calendar.py  community.py  geocoder.py  luma.py  outdoor.py
calyx/src/recom/ingest/: gmail.py  spotify.py
calyx/src/recom/ranking/: bucket_list.py  ranker.py
calyx/static/: manifest.json  sw.js
calyx/tests/: conftest.py  test_capacity_waitlist.py  test_event_chat_log.py  test_event_comments.py  test_group_visibility.py  test_invite_ics.py  test_prerequisites_and_host.py  test_soft_delete.py  test_tentative_and_trust.py  test_user_phone.py
demos/: admin-sources.html  group-join.html  group-page.html  groups-listing.html  index.html  profile.html  search.html  venues.html
scripts/: auth_gmail.py  auth_spotify.py  auth_youtube.py  browser_test.py  generate_demos.py  install_cron.sh  send_daily_taste.py  send_tonight.py  send_weekend_preview.py  smoke_test.sh  test_email_cal.py  train_model.py
site/: index.html
src/recom/: config.py  daily.py  db.py  main.py  models.py
src/recom/dashboard/: app.py
src/recom/email/: composer.py  sender.py
src/recom/events/: aggregator.py  bandsintown.py  boston_calendar.py  common.py  community.py  dice.py  eventbrite.py  geocoder.py  luma.py  meetup.py  museums.py  newsletters.py  outdoor.py  resident_advisor.py  songkick.py  (+3 more)
(+3 files in other folders)
