[project]
name = "recom"
version = "0.1.0"
description = "Weekly event recommender based on YouTube, Spotify, and newsletter interests"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-auth-httplib2>=0.2",
    "spotipy>=2.23",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-multipart>=0.0.22",
    "icalendar>=7.0.3",
    "premailer>=3.10.0",
    "radicale>=3.6.1",
]

[project.scripts]
recom = "recom.main:main"
recom-daily = "recom.daily:main"
recom-dashboard = "recom.dashboard.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recom"]

[dependency-groups]
dev = [
    "playwright>=1.58.0",
]
